appId: ${APP_ID}
tags:
  - auth
  - smoke
---
- launchApp:
    clearState: true
    clearKeychain: true
- openLink:
    link: ${DEV_CLIENT_URL}
- runFlow:
    when:
      visible: Open
    commands:
      - tapOn: Open
- extendedWaitUntil:
    visible:
      id: ${NAME_INPUT_ID}
    timeout: 60000
- tapOn:
    id: ${NAME_INPUT_ID}
- inputText: ${E2E_DISPLAY_NAME}
- tapOn:
    id: ${EMAIL_INPUT_ID}
- inputText: ${E2E_EMAIL}
- assertVisible: Show password
- tapOn:
    id: ${PASSWORD_VISIBILITY_BUTTON_ID}
- assertVisible: Hide password
- tapOn:
    id: ${PASSWORD_INPUT_ID}
- inputText: ${E2E_PASSWORD}
- scrollUntilVisible:
    element:
      id: ${SUBMIT_BUTTON_ID}
    direction: DOWN
    centerElement: true
    visibilityPercentage: 100
    timeout: 10000
- tapOn:
    id: ${SUBMIT_BUTTON_ID}
    enabled: true
- assertVisible:
    id: ${DASHBOARD_ID}
- stopApp
- openLink:
    link: ${DEV_CLIENT_URL}
- runFlow:
    when:
      visible: Open
    commands:
      - tapOn: Open
- extendedWaitUntil:
    visible:
      id: ${DASHBOARD_ID}
    timeout: 60000
- tapOn:
    id: ${LOGOUT_BUTTON_ID}
- assertVisible:
    id: ${SUBMIT_BUTTON_ID}
